# injectipy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  performance.yml  release.yml  security.yml
docs/: changelog.md  contributing.md  index.md  installation.md
examples/: README.md  advanced_patterns.py  async_patterns.py  basic_usage.py  testing_patterns.py
injectipy/: __init__.py  inject.py  store.py
injectipy/models/: inject.py
scripts/: changelog_generator.py  generate_api_docs.py  release.py  release_notes_generator.py  version_manager.py
tests/: conftest.py  test_ainject.py  test_async_concurrency.py  test_async_dependency_error.py  test_circular_dependencies.py  test_core_inject.py  test_decorator_compatibility.py  test_decorator_interactions.py  test_edge_cases.py  test_error_handling.py  test_inject.py  test_keyword_only.py  test_parameter_types.py  test_performance.py  test_python_features.py  test_scope_functionality.py  test_store.py  test_store_operations.py  test_thread_safety.py
