[tool.poetry]
name = "injectipy"
version = "0.1.0"
description = ""
authors = ["Wim Onderbeke <wim.onderbeke@hotmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["dependency injection"]
homepage = "https://github.com/Wimonder/injectipy"
repository = "https://github.com/Wimonder/injectipy"
documentation = "https://github.com/Wimonder/injectipy"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
mypy = "^1.8.0"
flake8 = "^6.1.0"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
